fix IE layout issue

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -9,7 +9,11 @@
 }
 
 .flex {
-    flex: 1;
+    flex: 1 0 auto;
+}
+
+.flex-no-shrink {
+    flex-shrink: 0;
 }
 
 .centered {
